--- a/blog.html
+++ b/blog.html
@@ -11,14 +11,14 @@
 <body>
     <div class="max-w-6xl mx-auto bg-white p-6 rounded-lg shadow-lg">
 
-        <!-- Header Section -->
+        
         <nav class="flex justify-between mx-4 my-4 bg-gray-50 rounded">
           <div class="flex items-center">
            <img src="./assets/logo.png" alt="">
            <h1 class="text-center text-2xl">Dev<span class="font-bold text-2xl">Board</span></h1>
           </div>
           <div>
-           <button class="mt-3 px-4 py-1 bg-blue-600 text-white rounded">Back to Desk</button>
+           <button onclick="goBack()" class="mt-3 px-4 py-1 bg-blue-600 text-white rounded">Back to Desk</button>
           </div>
       </nav>
 
@@ -54,5 +54,8 @@
         </div>
       </div>
     </div>
+    <script src="./script/blogs.js"></script>
+    <script src="./script/activitylog.js"></script>
+    <script src="./script/remove.js"></script>
 </body>
 </html>
